--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-19
 android.library=true
+android.library.reference.1=../../Android/sdk/extras/google/google_play_services/libproject/google-play-services_lib
