--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
